--- a/apps/common/templates/common/index.html
+++ b/apps/common/templates/common/index.html
@@ -79,7 +79,7 @@ https://templatemo.com/tm-546-sixteen-clothing
         <div class="row">
           <div class="col-md-12">
             <div class="inner-content">
-              <p>Copyright &copy; 2020 Clothing Store Co., Ltd.
+              <p>Copyright &copy; {%now 'Y'%} Clothing Store Co., Ltd.
             
             - Design: <a rel="nofollow noopener" href="https://templatemo.com" target="_blank">TemplateMo</a></p>
             </div>
