--- a/apps/accounts/templates/accounts/login.html
+++ b/apps/accounts/templates/accounts/login.html
@@ -1,10 +1,24 @@
 {% extends "common/index.html" %}
 
 {% load static %}
+{% load crispy_forms_tags %}
+
+{% block title %}Login{% endblock title %}
 
 {% block content %}
 
+<div class="card" style="padding: 10em 30em 10em 30em;">
+      <div class="card-header">
+        <h5 class="card-title">LOGIN</h5>
+      </div>
+      <div class="card-body">
+        <form>
+            {{form|crispy}}
+          <button type="submit" class="btn btn-primary">LOGIN</button>
+        </form>
+      </div>
+</div>
 
 
 
-{% endblock content %}
+{% endblock %}
