--- a/apps/accounts/templates/accounts/login.html
+++ b/apps/accounts/templates/accounts/login.html
@@ -1,24 +1,19 @@
-{% extends "common/index.html" %}
-
+{% extends 'common/index.html' %}
 {% load static %}
 {% load crispy_forms_tags %}
-
-{% block title %}Login{% endblock title %}
-
 {% block content %}
 
-<div class="card" style="padding: 10em 30em 10em 30em;">
-      <div class="card-header">
-        <h5 class="card-title">LOGIN</h5>
-      </div>
-      <div class="card-body">
-        <form>
-            {{form|crispy}}
-          <button type="submit" class="btn btn-primary">LOGIN</button>
+<div class="card custom-card" style="padding: 10em 30em 5em 30em;">
+    <div class="card-header">
+        <h5 class="card-title">LOGIN USER</h5>
+    </div>
+    <div class="card-body">
+        <form method="POST">
+            {% csrf_token %}
+            {{ form|crispy }}
+            <button type="submit" class="btn btn-primary">Login</button>
         </form>
-      </div>
+    </div>
 </div>
-
-
 
 {% endblock %}
