--- a/apps/accounts/templates/accounts/login.html
+++ b/apps/accounts/templates/accounts/login.html
@@ -1,6 +1,7 @@
 {% extends 'common/index.html' %}
 {% load static %}
 {% load crispy_forms_tags %}
+{% block title %}Login{% endblock %}
 {% block content %}
 
 <div class="card custom-card" style="padding: 10em 30em 5em 30em;">
@@ -13,6 +14,7 @@
             {{ form|crispy }}
             <button type="submit" class="btn btn-primary">Login</button>
         </form>
+        <p class="mt-4">Have you forgotten your password? <a href="{% url "accounts:reset_password" %}">Click here!</a></p>
     </div>
 </div>
 
