--- a/apps/shop/templates/shop/products.html
+++ b/apps/shop/templates/shop/products.html
@@ -1,7 +1,7 @@
 {% extends "common/index.html" %}
 {% load static %}
+{% block title %}Products{% endblock %}
 {% block content %}
-
     <!-- Page Content -->
     <div class="page-heading products-heading header-text">
       <div class="container">
@@ -9,7 +9,7 @@
           <div class="col-md-12">
             <div class="text-content">
               <h4>new arrivals</h4>
-              <h2>clothing-store products</h2>
+              <h2>sixteen products</h2>
             </div>
           </div>
         </div>
@@ -35,28 +35,28 @@
                 <div class="row grid">
                   {% for product in products %}
                     <div class="col-lg-4 col-md-4 all des">
-                          <div class="product-item">
-                              <a href="#"><img style="height: 10em; object-fit: cover;" src="{{ product.image_url }}" alt=""></a>
-                              <div class="down-content">
-                              <a href="#"><h4>{{ product.name }}</h4></a>
-                              <h6>${{ product.price }}</h6>
-                              <p>{{ product.desc|truncatechars:100 }}</p>
-                              <ul class="stars">
-                                  {% for i in rating_range %}
-                                      <li>
-                                          <i 
-                                              class="fa fa-star" 
-                                              {% if forloop.counter > product.avg_rating %}
-                                              style="color:#121212;"
-                                              {% endif %}
-                                              >
-                                          </i>
-                                      </li>
-                                  {% endfor %}
-                              </ul>
-                              <span>Reviews ({{product.reviews.count}})</span>
-                              </div>
-                          </div>
+                      <div class="product-item">
+                        <a href="#"><img style="height: 10em; object-fit: cover;" src="{{ product.image_url }}" alt=""></a>
+                        <div class="down-content">
+                        <a href="#"><h4>{{ product.name }}</h4></a>
+                        <h6>${{ product.price }}</h6>
+                        <p>{{ product.desc|truncatechars:35 }}</p>
+                        <ul class="stars">
+                            {% for i in rating_range %}
+                                <li>
+                                    <i 
+                                        class="fa fa-star" 
+                                        {% if forloop.counter > product.avg_rating %}
+                                        style="color:#121212;"
+                                        {% endif %}
+                                        >
+                                    </i>
+                                </li>
+                            {% endfor %}
+                        </ul>
+                        <span>Reviews ({{product.reviews.count}})</span>
+                        </div>
+                      </div>
                     </div>
                   {% endfor %}
                 </div>
@@ -74,6 +74,4 @@
         </div>
       </div>
     </div>
-
-
 {% endblock %}
